--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 github: [https://github.com/sponsors/helloharendra]
-patreon: https://www.patreon.com/helloharendra
+patreon: https://www.patreon.com/c/helloharendra
 open_collective: https://opencollective.com/helloharendra
 ko_fi: https://ko-fi.com/helloharendra
 tidelift: https://tidelift.com/subscription/pkg/npm-helloharendra
